# sat

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNF.hs  DPLL.hs  Main.hs  Makefile  Options.hs  Parser.hs  default.nix  fourmolu.yaml  sat.cabal
Printer/: Latex.hs  Util.hs
app/: CNF.hs  DPLL.hs  Main.hs  Options.hs  Parser.hs
app/Printer/: Latex.hs  Util.hs
