cabal-version:   3.4
name:            sat
version:         0.1.0.0
synopsis:        A SAT solver using the DPLL algorithm.
description:
  This is an application for SAT solving, using the DPLL algorithm.  It may
  yield the intermediate steps performed during algorithm execution and a
  solution to formula if satisifiable.  Additionally, output for LaTeX may be
  generated.

license:         GPL-3.0-or-later
license-file:    LICENSE
author:          Benedikt Rips
maintainer:      benedikt.rips@gmail.com
copyright:       (c) 2022 Benedikt Rips
category:        Math
build-type:      Simple
homepage:        https://github.com/f1rstlady/sat
bug-reports:     https://github.com/f1rstlady/sat/issues
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/f1rstlady/sat.git

common warnings
  ghc-options: -Wall

executable sat
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: GHC2021
  other-modules:
    CNF
    DPLL
    Options
    Parser
    Printer.Latex
    Printer.Util

  build-depends:
    , base
    , containers
    , megaparsec
    , mtl
    , optparse-applicative
